@@ -1,3 +1,13 @@
+2019-11-29  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR ada/92489
+	Backport from mainline
+	2019-07-01  Ed Schonberg  <schonberg@adacore.com>
+
+	* exp_attr.adb (Expand_Attribute_Reference, case Invalid_Value):
+	Resolve result of call to Get_Simple_Init_Val, which may be a
+	conversion of a literal.
+
 2019-11-25  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR ada/92362
